solve the problem about null organization in login logic